# PyQC

./: .gitignore  AGENTS.md  PyQC.py  README.md  image_widget.py  pyproject.toml  test.csv  window1.py  window1.ui
tests/: conftest.py  test_csv_roundtrip.py
