[project]
name = "pyqc"
version = "0.1.0"
description = "A tool for reviewing QC images and storing ratings"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyqt5>=5.15.0",
]

[project.scripts]
pyqc = "PyQC:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
